--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ management.endpoints.web.base-path=/filing-history-data-api
 management.endpoints.web.path-mapping.health=healthcheck
 management.endpoint.health.show-details=never
 management.endpoint.health.enabled=true
-api.api-url=${API_URL:localhost}
+api.api-url=${CHS_KAFKA_API_URL:localhost}
 api.api-key=${CHS_API_KEY:chsApiKey}
