--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>uk.gov.companieshouse</groupId>
     <artifactId>companies-house-parent</artifactId>
-    <version>2.1.2</version>
+    <version>2.1.5</version>
   </parent>
 
   <name>filing-history-data-api</name>
@@ -28,6 +28,12 @@
     <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
     <skip.unit.tests>false</skip.unit.tests>
     <skip.integration.tests>false</skip.integration.tests>
+
+    <!--explicit versions of transitive dependencies with vulnerabilities in previous versions-->
+    <logback.version>1.4.14</logback.version>
+    <jackson-databind.version>2.16.1</jackson-databind.version>
+    <grpc.version>1.60.1</grpc.version>
+
     <!--sonar configuration-->
     <sonar.coverage.jacoco.xmlReportPaths>
       ${project.build.directory}/site/jacoco/jacoco.xml
@@ -48,6 +54,34 @@
   </dependencyManagement>
 
   <dependencies>
+    <!--the following transitive dependencies are added specifically to avoid vulnerabilities-->
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-core</artifactId>
+      <version>${logback.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>${logback.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${jackson-databind.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.grpc</groupId>
+      <artifactId>grpc-api</artifactId>
+      <version>${grpc.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.grpc</groupId>
+      <artifactId>grpc-context</artifactId>
+      <version>${grpc.version}</version>
+    </dependency>
+    <!--end transitive dependencies-->
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter</artifactId>
