DSND-2170: Implement upsert filing history service method

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ management.endpoints.web.base-path=/filing-history-data-api
 management.endpoints.web.path-mapping.health=healthcheck
 management.endpoint.health.show-details=never
 management.endpoint.health.enabled=true
+management.health.mongo.enabled=false
 api.api-url=${CHS_KAFKA_API_URL:localhost}
 api.api-key=${CHS_API_KEY:chsApiKey}
