--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
       ${project.build.directory}/site/jacoco/jacoco.xml
     </sonar.coverage.jacoco.xmlReportPaths>
     <sonar.jacoco.reports>${project.build.directory}/site</sonar.jacoco.reports>
+    <sonar.coverage.exclusions>**/model/*</sonar.coverage.exclusions>
   </properties>
 
   <dependencyManagement>
