--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <jib-maven-plugin.version>3.4.0</jib-maven-plugin.version>
     <structured-logging.version>3.0.1</structured-logging.version>
     <api-sdk-manager-java-library.version>3.0.1</api-sdk-manager-java-library.version>
-    <private-api-sdk-java.version>unversioned</private-api-sdk-java.version>
+    <private-api-sdk-java.version>2.0.346</private-api-sdk-java.version>
     <maven-surefire-plugin.version>3.2.2</maven-surefire-plugin.version>
     <maven-build-helper-plugin.version>3.4.0</maven-build-helper-plugin.version>
     <maven-failsafe-plugin.version>3.2.2</maven-failsafe-plugin.version>
@@ -35,6 +35,8 @@
     <logback.version>1.4.14</logback.version>
     <jackson-databind.version>2.16.1</jackson-databind.version>
     <grpc.version>1.60.1</grpc.version>
+    <spring-core.version>6.1.3</spring-core.version>
+    <json-path.version>2.9.0</json-path.version>
 
     <!--sonar configuration-->
     <sonar.coverage.jacoco.xmlReportPaths>
@@ -89,6 +91,16 @@
       <groupId>io.grpc</groupId>
       <artifactId>grpc-context</artifactId>
       <version>${grpc.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+      <version>${spring-core.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.jayway.jsonpath</groupId>
+      <artifactId>json-path</artifactId>
+      <version>${json-path.version}</version>
     </dependency>
     <!--end transitive dependencies-->
 
