--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,8 @@ management.endpoints.web.base-path=/filing-history-data-api
 management.endpoints.web.path-mapping.health=healthcheck
 management.endpoint.health.show-details=never
 management.endpoint.health.enabled=true
+management.health.mongo.enabled=false
 api.api-url=${CHS_KAFKA_API_URL:localhost}
 api.api-key=${CHS_API_KEY:chsApiKey}
+spring.data.mongodb.uri=${MONGODB_URL:mongodb://mongo:27017}/company_filing_history?retryWrites=false
+spring.data.mongodb.name=company_filing_history
