Refactor FilingHistoryService to split insert and update logic
* Remove unneeded exception class as will be covered in future
* Refactor FilingHistoryProcessor to obtain existing document
* Fix unit and integration tests which is WIP

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -8,6 +8,6 @@ api.api-url=localhost
 api.api-key=chsApiKey
 spring.data.mongodb.uri=mongodb://mongo:27017/company_filing_history?retryWrites=false
 spring.data.mongodb.name=company_filing_history
-chs.kafka.api.endpoint=localhost
+chs.kafka.api.endpoint=http://localhost:8080
 chs.kafka.api.key=chsApiKey
 feature.resource_changed_call.enabled=false
