Remove unneeded ApiClientService classes
* Refactor ResourceChangedApiClient to use bean for internal client
* Remove unused clock bean from config
* Refactor bean to return instant instead of offDateTime
* Refactor ResourceChangedApiClient return ApiResponse instead of throwing exceptions
* Add new ServiceResult for service unavailable
* Remove unneeded config

--- a/src/test/resources/application-feature_flag_enabled.properties
+++ b/src/test/resources/application-feature_flag_enabled.properties
@@ -4,10 +4,8 @@ management.endpoints.web.path-mapping.health=healthcheck
 management.endpoint.health.show-details=never
 management.endpoint.health.enabled=true
 management.health.mongo.enabled=false
-api.api-url=localhost
+api.api-url=http://localhost:8080
 api.api-key=chsApiKey
 spring.data.mongodb.uri=mongodb://mongo:27017/company_filing_history?retryWrites=false
 spring.data.mongodb.name=company_filing_history
-chs.kafka.api.endpoint=http://localhost:8080
-chs.kafka.api.key=chsApiKey
 feature.resource_changed_call.enabled=true
