DSND-2170: Update mongo uri value; will be taken from vault (#16)
* DSND-2170: Update mongo uri value; will be taken from vault

* DSND-2170: Add default value for mongodb URI

* DSND-2170: Add default database name

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ management.endpoint.health.enabled=true
 management.health.mongo.enabled=false
 api.api-url=${CHS_KAFKA_API_URL:localhost}
 api.api-key=${CHS_API_KEY:chsApiKey}
-spring.data.mongodb.uri=${MONGODB_URL:mongodb://mongo:27017}/company_filing_history?retryWrites=false
+spring.data.mongodb.uri=${MONGODB_URL:mongodb://mongo:27017/company_filing_history}
 spring.data.mongodb.name=company_filing_history
