Refactor name of feature flag
* Update request body being used in docs

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -8,4 +8,4 @@ api.api-url=http://localhost:8080
 api.api-key=chsApiKey
 spring.data.mongodb.uri=mongodb://mongo:27017/company_filing_history?retryWrites=false
 spring.data.mongodb.name=company_filing_history
-feature.resource_changed_call.enabled=false
+feature.resource_changed_call.disabled=false
