--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ management.endpoints.web.path-mapping.health=healthcheck
 management.endpoint.health.show-details=never
 management.endpoint.health.enabled=true
 management.health.mongo.enabled=false
-api.api-url=${CHS_KAFKA_API_URL:localhost}
+api.api-url=${CHS_KAFKA_API_URL:http://localhost:8888}
 api.api-key=${CHS_API_KEY:chsApiKey}
 spring.data.mongodb.uri=${MONGODB_URL:mongodb://mongo:27017/company_filing_history}
 spring.data.mongodb.name=company_filing_history
