--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ api.api-key=${CHS_API_KEY:chsApiKey}
 spring.data.mongodb.uri=${MONGODB_URL:mongodb://mongo:27017/company_filing_history}
 spring.data.mongodb.name=company_filing_history
 feature.resource_changed_call.disabled=${RESOURCE_CHANGED_CALL_DISABLED:false}
+document-api-url=${DOCUMENT_API_LOCAL_URL:http://localhost:8080}
