DSND-2318: Make API key name consistent with Mongo and make port configurable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,14 @@ management.endpoints.web.path-mapping.health=healthcheck
 management.endpoint.health.show-details=never
 management.endpoint.health.enabled=true
 management.health.mongo.enabled=false
+
 api.api-url=${CHS_KAFKA_API_URL:http://localhost:8888}
-api.api-key=${CHS_API_KEY:chsApiKey}
+api.api-key=${FILING_HISTORY_API_SUB_DELTA_KEY:chsApiKey}
+api.document-api-url=${DOCUMENT_API_LOCAL_URL:http://localhost:8080}
+
 spring.data.mongodb.uri=${MONGODB_URL:mongodb://mongo:27017/company_filing_history}
 spring.data.mongodb.name=company_filing_history
+
 feature.resource_changed_call.disabled=${RESOURCE_CHANGED_CALL_DISABLED:false}
-document-api-url=${DOCUMENT_API_LOCAL_URL:http://localhost:8080}
+
+server.port=${PORT:8081}
