DSND-2420: Begin mapping filing history status field

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.data.mongodb.name=company_filing_history
 feature.resource_changed_call.disabled=${RESOURCE_CHANGED_CALL_DISABLED:false}
 
 server.port=${PORT:8081}
+
+status.rules=status_field_rules.yml
