--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,7 @@
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>testcontainers</artifactId>
+      <version>${test-containers.version}</version>
       <scope>test</scope>
       <exclusions>
         <exclusion>
@@ -159,6 +160,7 @@
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>junit-jupiter</artifactId>
+      <version>${test-containers.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
