BI-13939: Get debug logs on failed Mongo test container startup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,4 @@ feature.delete_child_transactions.disabled=${DELETE_CHILD_TRANSACTIONS_DISABLED:
 server.port=${PORT:8081}
 
 status.rules=status_field_rules.yml
-logging.level.root=trace
+logging.level.root=debug
