--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <maven.compiler.target>21</maven.compiler.target>
     <spring.boot.version>3.3.3</spring.boot.version>
     <jib-maven-plugin.version>3.4.3</jib-maven-plugin.version>
-    <structured-logging.version>unversioned</structured-logging.version>
+    <structured-logging.version>3.0.14</structured-logging.version>
     <api-sdk-manager-java-library.version>3.0.5</api-sdk-manager-java-library.version>
     <api-security-java.version>2.0.5</api-security-java.version>
     <private-api-sdk-java.version>4.0.133</private-api-sdk-java.version>
