--- a/pom.xml
+++ b/pom.xml
@@ -32,11 +32,14 @@
     <skip.integration.tests>false</skip.integration.tests>
 
     <!--sonar configuration-->
+    <sonar.projectKey>uk.gov.companieshouse:filing-history-data-api</sonar.projectKey>
+    <sonar.sources>src/main</sonar.sources>
+    <sonar.tests>src/test</sonar.tests>
+    <sonar.verbose>true</sonar.verbose>
     <sonar.coverage.jacoco.xmlReportPaths>
-      ${project.build.directory}/site/jacoco/jacoco.xml
+      ${project.basedir}/target/site/jacoco/jacoco.xml
     </sonar.coverage.jacoco.xmlReportPaths>
-    <sonar.jacoco.reports>${project.build.directory}/site</sonar.jacoco.reports>
-    <sonar.coverage.exclusions>**/model/*</sonar.coverage.exclusions>
+    <sonar.jacoco.reports>${project.basedir}/target/site</sonar.jacoco.reports>
   </properties>
 
   <dependencyManagement>
