CC-1685: Added DEBUG logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,5 @@ feature.resource_changed_call.disabled=${RESOURCE_CHANGED_CALL_DISABLED:false}
 server.port=${PORT:8081}
 
 status.rules=status_field_rules.yml
+
+logging.level.=DEBUG
