--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>uk.gov.companieshouse</groupId>
     <artifactId>companies-house-parent</artifactId>
-    <version>2.1.10</version>
+    <version>2.1.11</version>
   </parent>
 
   <name>filing-history-data-api</name>
@@ -19,7 +19,7 @@
     <maven.compiler.source>21</maven.compiler.source>
     <maven.compiler.target>21</maven.compiler.target>
     <spring.boot.version>3.4.1</spring.boot.version>
-    <jib-maven-plugin.version>3.4.4</jib-maven-plugin.version> <!-- Version 3.4.3 does not work -->
+    <jib-maven-plugin.version>3.4.4</jib-maven-plugin.version>
     <structured-logging.version>3.0.24</structured-logging.version>
     <api-sdk-manager-java-library.version>3.0.6</api-sdk-manager-java-library.version>
     <api-security-java.version>2.0.8</api-security-java.version>
@@ -53,17 +53,6 @@
 
   <dependencies>
     <!--section to provide specific versions of transitive dependencies to avoid vulnerabilities, if any exist-->
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-core</artifactId>
-      <version>1.5.16</version>
-    </dependency>
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-classic</artifactId>
-      <version>1.5.16</version>
-      <scope>test</scope>
-    </dependency>
     <!--end transitive dependencies-->
 
     <dependency>
