--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <structured-logging.version>3.0.24</structured-logging.version>
     <api-sdk-manager-java-library.version>3.0.6</api-sdk-manager-java-library.version>
     <api-security-java.version>2.0.8</api-security-java.version>
-    <private-api-sdk-java.version>4.0.258</private-api-sdk-java.version>
+    <private-api-sdk-java.version>unversioned</private-api-sdk-java.version>
     <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
     <maven-failsafe-plugin.version>3.5.2</maven-failsafe-plugin.version>
     <wiremock.version>3.11.0</wiremock.version>
