--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
         <version>3.18.0</version>
       </dependency>
 
-      <!-- Pinning version to address CVE-2024-11407, CVE-2024-7246 grpc-api pulled transitively-->
+      <!-- Pinning version to address CVE-2024-7246 grpc-api pulled transitively -->
       <dependency>
         <groupId>io.grpc</groupId>
         <artifactId>grpc-api</artifactId>
